--- a/src/assets/scss/05_components/module.scss
+++ b/src/assets/scss/05_components/module.scss
@@ -1,3 +1,7 @@
+@import './views';
 @import './navbar';
 @import './sidebar';
+@import './searcher';
+@import './product-edit';
 @import './content-grid';
+@import './provider-edit';
